--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <div class="col-lg-6 xs-height col-xs-12 d-flex justify-content-center align-items-center" style="background: #DBC39B; padding-left: 30px;">
                       <div class="text-left text-light">
                         <h2 class="display-4 xs-h">XHosting</h2>
-                        <p class="xs-font" style=" line-height:50px;">
+                        <p class="xs-font" style=" line-height:50px;color: black">
                           Is One Of the Most Populer
 
                           Web Hosting In the World
