--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ">
-            <li class="nav-item  p-2" style="background: #DBC39B;">
-              <a class="nav-link p-2" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item  p-2">
+              <a class="nav-link p-2" href="#">Home</a>
             </li>
             <li class="nav-item p-2">
               <a class="nav-link" href="pages/services.html">Services</a>
@@ -43,10 +43,10 @@
           <div class="container">
               <div class="row align-items-center xs-cloumn" style="height: 500px;">
                   <div class="col-lg-8 col-xs-12">
-                      <p class="slogin">Have a Website ? <br> Don't Thinking <br> Just Host</p>
+                      <p class="slogin">With More Than 100,000 <br> Websites XHosting Is <br> The Best Choice For You</p>
                   </div>
                   <div class="col-lg-4 col-xs-12">
-                    <button class="JoinUs btn-lg btn-block">Join Us Now</button>
+                   <a href="./pages/SignIn.html"><button class="JoinUs btn-lg btn-block">Join Us Now</button></a>
                 </div>
               </div>
           </div>
@@ -63,7 +63,7 @@
                   <div class="col-lg-6 xs-height col-xs-12 d-flex justify-content-center align-items-center" style="background: #DBC39B; padding-left: 30px;">
                       <div class="text-left text-light">
                         <h2 class="display-4 xs-h">XHosting</h2>
-                        <p class="xs-font" style=" line-height:50px;color: black">
+                        <p class="xs-font" style=" line-height:50px; color: black">
                           Is One Of the Most Populer
 
                           Web Hosting In the World
