--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="../css/pages/contact.css">
-    <link rel="stylesheet" href="../css/pages/responsive.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
 </head>
@@ -16,29 +16,39 @@
     <!-- Navbar -->
 
        <nav class="navbar navbar-expand-lg navbar-light bg-light";>
-            <a class="navbar-brand " style="padding-left: 150px;" href="../index.html"><img src="../images/XHosting.svg" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/XHosting.svg" alt=""></a>
         </nav>
 
-      <div class="text-center mt-5">
+      <div class="text-center">
         <h1 class="display-4 contact-xs">Contact</h1>
       </div>
 
-      <div class="container text-center mt-5">
-          <div>
-              <form action="">
-                  <input class="email" type="email" name="email" placeholder="Email">
-              </form>
-          </div>
-          <div class="mt-3">
-              <form action="">
-                  <textarea class="textarea p-5" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-              </form>
-          </div>
+      <div class="container text-center mt-3">
+       <div class="row">
+           <div class="col-lg-6">
+                <form action="">
+                    <div>
+                        <input type="text" name="fname" placeholder="First Name">
+                    </div>
+                    <div>
+                        <input type="text" name="lname" placeholder="Last Name">
+                    </div>
+                    <div>
+                        <input type="text" name="email" placeholder="Email">
+                    </div>
+                </form>
+           </div>
+           <div class="col-lg-6">
+               <form action="">
+                   <textarea name="" id="" cols="50" rows="10" class="textarea" placeholder="Message"></textarea>
+               </form>
+           </div>
+       </div>
       </div>
 
       <div class="text-center">
         <button class="send">Send</button>
-     </div>
+      </div>
 
 
 
